# ai-newsletter-api

./: .dockerignore  .gitignore  Dockerfile  PROJECT_CONTEXT.md  README.md  alembic.ini  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci-main.yml  ci-pr.yml  ci.yml  test.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: f05df153395f_initial.py
app/: main.py
app/api/: auth.py  auth_api.py  interests.py  interests_api.py  meta_api.py  openapi_responses.py  router.py
app/api/dependencies/: __init__.py  current_user.py  unit_of_work.py
app/api/schemas/: __init__.py  auth.py  auth_request_models.py  auth_response_models.py  interests.py  interests_request_models.py  interests_response_models.py  meta.py  meta_request_models.py  meta_response_models.py
app/core/: auth.py  config.py  errors.py  lifespan.py  logging.py  prompt_sanitizer.py  rate_limit.py
app/db/: session.py
app/db/models/: __init__.py  content_item.py  interest.py  newsletter.py  user.py
app/llm/: __init__.py  client.py  prompts.py  schemas.py
app/services/: __init__.py  auth.py  auth_service.py  interest.py  interest_service.py
tests/: conftest.py  test_health.py  test_lifespan.py
tests/integration/: test_api_auth.py  test_api_health.py  test_api_interests.py  test_api_rate_limits.py  test_db_models.py
tests/unit/: test_auth.py  test_config.py  test_health.py  test_interest_service.py  test_lifespan.py  test_llm_client.py  test_prompt_sanitizer.py
