[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-newsletter-api"
version = "0.1.0"
description = "FastAPI backend MVP for an LLM-driven tech newsletter app"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Brady Malott" }]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "email-validator>=2.0.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pgvector>=0.3.0",
  "python-dotenv>=1.0.1",
  "openai>=1.0.0",
  "python-jose[cryptography]>=3.3.0",
  "libpass[bcrypt]>=1.9.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.14.14",
  "basedpyright>=1.20.1",
  "types-python-dateutil>=2.9.0.20240316",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "C90",    # mccabe complexity
    "ANN",    # flake8-annotations (type hints)
    "RUF",    # ruff-specific rules
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "E501",   # Line too long (pycodestyle)
    "W505",   # Doc line too long (pycodestyle)
]
ignore = [
    "ANN201",  # Missing return type annotation for public function (too strict for __init__)
    "ANN401",  # Dynamically typed expressions (Any) are disallowed (too strict)
    "B008",    # Function calls in argument defaults (FastAPI Depends() is intentional)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = true
venvPath = "."
venv = ".venv"
exclude = ["**/.venv", "**/site-packages", "**/alembic/versions"]
include = ["app/**/*.py", "tests/**/*.py", "alembic/**/*.py"]
